<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout 
        android:id="@+id/lay"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" >
    
    <TextView
        android:id="@+id/t_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:text="@string/tv1" />

	<EditText
      	android:id="@+id/weight"
		android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:layout_centerHorizontal="true"
       	android:layout_toRightOf="@+id/t_weight"
       	android:inputType="number"
		android:hint="@string/tv1"  />
  
	</RelativeLayout>
	
    <RelativeLayout 
        android:id="@+id/lay2"
        android:layout_below="@+id/lay"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" >
    
	<TextView
	    android:id="@+id/t_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:text="@string/tv2" />

	<EditText
      	android:id="@+id/height"
		android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:layout_centerHorizontal="true"
     	android:layout_toRightOf="@+id/t_height"
       	android:inputType="number"
		android:hint="@string/tv2"  />
  
	</RelativeLayout>
	
		<RadioGroup 
		    android:id="@+id/radio"
	     	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_below="@+id/lay2" >
	        
		      <RadioButton
				android:id="@+id/metre"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
		        android:text="@string/rad1" />
		      <RadioButton 
				android:id="@+id/cent"
		        android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		        android:checked="true"
		        android:text="@string/rad2" />
		     	
	  </RadioGroup>

  <CheckBox
		android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:checked="false"
		android:layout_below="@+id/radio"
		android:text="@string/check" />

  <Button
		android:id="@+id/imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check"
		android:text="@string/button1" />
  
  <Button
		android:id="@+id/raz"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/imc"
	    android:text="@string/button2" />

  <TextView
      android:id="@+id/result"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/raz"
      android:text="@string/result" />

</RelativeLayout>